# tgfx

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  classes.html  classtgfx_1_1clock-members.html  classtgfx_1_1clock.html  classtgfx_1_1color-members.html  classtgfx_1_1context-members.html  classtgfx_1_1context.html  classtgfx_1_1drawable-members.html  classtgfx_1_1drawable.html  classtgfx_1_1line-members.html  classtgfx_1_1point.html  classtgfx_1_1screen-members.html  classtgfx_1_1style-members.html  classtgfx_1_1style.html  classtgfx_1_1time-members.html  classtgfx_1_1time.html  classtgfx_1_1vec2-members.html  classtgfx_1_1vec2.html  color_2color_8cpp-example.html  context_8hpp_source.html  dir_bdb4153d7e6f80c705ba4999319a2a74.html  dir_d6b9241148e2ea4728b09edbf01ab375.html  examples.html  files.html  functions.html  hierarchy.html  line_8hpp_source.html  menudata.js  structtgfx_1_1vec2_1_1hasher-members.html  tgfx_8hpp_source.html  time_8hpp_source.html  vec2_8hpp_source.html
docs.in/: mainpage.md
docs/html/: annotated.html  ansi-color-lut_8hpp_source.html  ansi-color_8hpp_source.html  classes.html  classtgfx_1_1color-members.html  classtgfx_1_1color.html  classtgfx_1_1context-members.html  classtgfx_1_1context.html  classtgfx_1_1drawable.html  classtgfx_1_1line.html  classtgfx_1_1point-members.html  classtgfx_1_1point.html  classtgfx_1_1screen-members.html  classtgfx_1_1screen.html  classtgfx_1_1style-members.html  classtgfx_1_1style.html  classtgfx_1_1time.html  classtgfx_1_1vec2-members.html  classtgfx_1_1vec2.html  (+34 more)
examples/: CMakeLists.txt
search/: all_0.js  all_1.js  all_11.js  all_14.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  functions_1.js  functions_10.js  functions_2.js  functions_4.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_e.js  pages_0.js  search.css  searchdata.js  variables_2.js  variables_5.js
test/: CMakeLists.txt  test.cpp
test/tgfx-test/: color.hpp  context.hpp  screen.hpp  style.hpp
test/tgfx-test/internal/: ansi-color.hpp
test/tgfx-test/primitive/: line.hpp  point.hpp
test/tgfx-test/util/: clock.hpp  time.hpp  vec2.hpp
(+65 files in other folders)
